# oakley-finance

./: .gitignore  CLAUDE.md  README.md  SKILL.md  claude.md  pyproject.toml  setup.cfg
oakley_finance/: __init__.py  alerts.py  cli.py  daily_briefing.py  economic_calendar.py  market_data.py  news_scanner.py  portfolio.py
oakley_finance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oakley_finance/common/: __init__.py  cache.py  config.py  formatting.py  rate_limiter.py
oakley_finance/references/: asx_codes.json  economic_calendar_template.json  forex_pairs.json  rss_feeds.json
