[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakley-finance"
version = "1.0.0"
description = "Australian finance CLI — market data, news, portfolio & alerts"
requires-python = ">=3.8"
dependencies = [
    "yfinance>=0.2.31",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "multitasking<0.0.12",
]

[project.scripts]
oakley-finance = "oakley_finance.cli:main"

[tool.setuptools.packages.find]
include = ["oakley_finance*"]

[tool.setuptools.package-data]
oakley_finance = ["references/*.json"]
