[metadata]
name = oakley-finance
version = 1.0.0
description = Australian finance CLI — market data, news, portfolio & alerts

[options]
packages = find:
python_requires = >=3.8
install_requires =
    yfinance>=0.2.31
    feedparser>=6.0.10
    requests>=2.31.0
    python-dateutil>=2.8.2
    pytz>=2023.3
    multitasking<0.0.12

[options.packages.find]
include = oakley_finance*

[options.package_data]
oakley_finance = references/*.json

[options.entry_points]
console_scripts =
    oakley-finance = oakley_finance.cli:main
